fix(autocomplete): Align text in results dropdown to the left

--- a/src/autocomplete/style.scss
+++ b/src/autocomplete/style.scss
@@ -24,6 +24,7 @@
         z-index: 5;
         padding: 0.2em 0.3em;
         border: 1px solid $white;
+        text-align: left;
         
         @include drop-shadow();
     }
